--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h5 class="animated fadeInDown" style="animation-delay: 1s">¡Bienvenido a PlakMuros!</h5>
           <p class="d-none d-md-block animated fadeInDown" style="animation-delay: 1s">Plakmuros es una empresa especializada en la venta de materiales de construcción. Ofrecemos una amplia variedad de productos de alta calidad.</p>
           <p class="animated fadeInUp" style="animation-duration: 3s" ><br>
-             <a href="#">Leer Más</a>    
+             <a href="#Servicios">Leer Más</a>    
         </p>
         </div>
       </div>
@@ -65,7 +65,7 @@
             <h5 class="animated fadeInDown" style="animation-delay: 1s">Servicios de calidad</h5>
             <p class="d-none d-md-block animated fadeInDown" style="animation-delay: 1s"> Nuestro enfoque se basa en ofrecer soluciones personalizadas y adaptadas a cada situación, buscando siempre la excelencia y la satisfacción del cliente.</p>
             <p class="animated fadeInUp" style="animation-duration: 3s" ><br>
-               <a href="#">Leer Más</a>    
+               <a href="./html/Servicios.html">Leer Más</a>    
           </p>
         </div>
       </div>
@@ -93,11 +93,12 @@
   </div>
 
   <section class="container ">
+    <a name="Servicios"></a>
     <div class="row">
       <div class="col-sm-4 col-lg-6 col-md-12 about-text" id="paddin2">
         <div class=" text-dark">
-          <h3 class="text-center titulo">¿Qué ofrecemos?</h3>
-          <p class="descripcion">Plakmuros es una empresa especializada en la venta de materiales de construcción. Ofrecemos una amplia variedad de productos de alta calidad, como placas de yeso, perfiles metálicos, tornillos y herramientas, todo lo necesario para la construcción y remodelación de espacios. Nuestro compromiso es brindar a nuestros clientes soluciones eficientes y duraderas, respaldadas por un excelente servicio al cliente. Además, ofrecemos servicio a domicilio sobre pedido en todos los municipios del estado de Guanajuato y sus alrededores. </p>
+          <h3 class="text-center titulo" >¿Qué ofrecemos?</h3>
+          <p class="descripcion">Plakmuros es una empresa especializada en la venta de materiales de construcción. Ofrecemos una amplia variedad de productos de alta calidad, como placas de yeso, perfiles metálicos, tornillos y herramientas, todo lo necesario para la construcción y remodelación de espacios. Nuestro compromiso es brindar a nuestros clientes soluciones eficientes y duraderas, respaldadas por un excelente servicio al cliente. </p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12 col-12">
@@ -107,7 +108,7 @@
       </div>
     </div>
   </section> <br>
-  <div class="text-center container titulo"> Algunos de nuestros productos:</div> <br>
+  <h5 class="text-center container titulo"> Algunos de nuestros productos:</h5> <br>
   <section class="portafolio section-padding">
     <div class="container">
         <div class="row">
@@ -115,10 +116,23 @@
                 <div class="card text-dark text-center bg-light pb-2">
                     <div class="card-body text-dark">
                         <div class="img-area mb-4">
-                            <img src="./imgProdu/perfilesMetalicos.png" class="img-fluid" alt="">
+                            <img src="./imgProdu/Alambre1k.png" class="img-fluid" alt="">
                         </div>
-                        <h3>Perfiles metálicos premium</h3>
-                        <p class="lead"> Línea de perfiles metálicos Premium Saint-Gobain Plaka son fabricados en México con lámina de acero galvanizado de primera calidad grado </p>
+                        <h3>Alambre Galvanizado 1kg</h3>
+                        <p class="lead">Alambre de acero, galvanizado y empacado en caja en una práctica presentación de rollo de 1 Kg.</p>
+                         <button class="btn  text-white" onclick="mostrarD1();">Más información</button>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-12 col-md-12 col-lg-4">
+                <div class="card text-dark text-center bg-light pb-2">
+                    <div class="card-body text-dark">
+                        <div class="img-area mb-4">
+                            <img src="./imgProdu/Alambregalvanizado.png" class="img-fluid" alt="">
+                        </div>
+                        <h3>Alambre Galvanizado</h3>
+                        <p class="lead">Sirve como refuerzo en los cimientos de las construcciones, es la materia prima.</p>
                          <button class="btn  text-white">Más información</button>
                     </div>
 
@@ -128,23 +142,10 @@
                 <div class="card text-dark text-center bg-light pb-2">
                     <div class="card-body text-dark">
                         <div class="img-area mb-4">
-                            <img src="./imgProdu/perfilacusticobaroque.png" class="img-fluid" alt="">
+                            <img src="./imgProdu/aquarocMax.png" class="img-fluid" alt="">
                         </div>
-                        <h3>Plafón acustico de lana mineral Baroque</h3>
-                        <p class="lead">Proporcionan ambientes interiores confortables, aislándonos del frió en climas frescos y manteniendo la temperatura confortable.</p>
-                         <button class="btn  text-white">Más información</button>
-                    </div>
-
-                </div>
-            </div>
-            <div class="col-12 col-md-12 col-lg-4">
-                <div class="card text-dark text-center bg-light pb-2">
-                    <div class="card-body text-dark">
-                        <div class="img-area mb-4">
-                            <img src="./imgProdu/plafonacusticosanmicro.png" class="img-fluid" alt="">
-                        </div>
-                        <h3>Plafón acustico de lana mineral Sandmicro</h3>
-                        <p class="lead">Proporcionan ambientes interiores confortables, aislándonos del frió en climas frescos y manteniendo la temperatura confortable.</p>
+                        <h3>Aquaroc Max</h3>
+                        <p class="lead">Plakas para exterior fabricadas con cemento Portland y aditivos. Recubiertas con malla de fibra de vidrio.</p>
                          <button class="btn  text-white">Más información</button>
                     </div>
 
@@ -155,6 +156,7 @@
     </div>
 </section>
 
+ <div id="centrar"><a class="btn text-white" href="./html/Productos.html" >Ver más productos</a></div> 
 
   
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
